--- a/assets/sass/_objects.media.scss
+++ b/assets/sass/_objects.media.scss
@@ -119,7 +119,7 @@
 	}
 
     .navbar__notify-badge {
-        margin-top: -2.1em;
+        margin-top: -1.5em;
 		margin-right: -.2em;
 		padding-left: .5em;
 		font-size: $font-size!important;
